SERVER-24621 make find command min/max respect the collation