src/mongo/db/query/query_planner_test_fixture.h
@@ -162,6 +162,8 @@ protected:
      */
     void runQueryAsCommand(const BSONObj& cmdObj);
 
+    void runInvalidQueryAsCommand(const BSONObj& cmdObj);
+
     //
     // Introspect solutions.
     //
