jstests/core/collation.js
@@ -584,39 +584,6 @@
                       .collation({locale: "en_US", strength: 3})
                       .sort({a: 1});
         assert.eq(res.toArray(), [{a: "a"}, {a: "A"}, {a: "b"}, {a: "B"}]);
-
-        // Ensure results from index with min/max query are sorted to match requested collation.
-        coll.drop();
-        assert.commandWorked(coll.ensureIndex({a: 1, b: 1}));
-        assert.writeOK(coll.insert(
-            [{a: 1, b: 1}, {a: 1, b: 2}, {a: 1, b: "A"}, {a: 1, b: "a"}, {a: 2, b: 2}]));
-        var expected = [{a: 1, b: 1}, {a: 1, b: 2}, {a: 1, b: "a"}, {a: 1, b: "A"}, {a: 2, b: 2}];
-        res = coll.find({}, {_id: 0})
-                  .hint({a: 1, b: 1})
-                  .min({a: 1, b: 1})
-                  .max({a: 2, b: 3})
-                  .collation({locale: "en_US", strength: 3})
-                  .sort({a: 1, b: 1});
-        assert.eq(res.toArray(), expected);
-        res = coll.find({}, {_id: 0})
-                  .hint({a: 1, b: 1})
-                  .min({a: 1, b: 1})
-                  .collation({locale: "en_US", strength: 3})
-                  .sort({a: 1, b: 1});
-        assert.eq(res.toArray(), expected);
-        res = coll.find({}, {_id: 0})
-                  .hint({a: 1, b: 1})
-                  .max({a: 2, b: 3})
-                  .collation({locale: "en_US", strength: 3})
-                  .sort({a: 1, b: 1});
-        assert.eq(res.toArray(), expected);
-        res = coll.find({}, {_id: 0})
-                  .hint({a: 1, b: 1})
-                  .min({a: 1, b: "A"})
-                  .max({a: 2, b: 1})
-                  .collation({locale: "en_US", strength: 3})
-                  .sort({a: 1, b: 1});
-        assert.eq(res.toArray(), [{a: 1, b: "a"}, {a: 1, b: "A"}]);
     }
 
     // Find should return correct results when no collation specified and collection has a default
@@ -2007,5 +1974,93 @@
         assert.eq(originalCollectionInfos[0].options.collation,
                   cappedCollectionInfos[0].options.collation);
         assert.eq([{_id: "FOO"}], coll.find({_id: "foo"}).toArray());
+    }
+
+    // Test that the find command's min/max options respect the collation.
+    if (db.getMongo().useReadCommands()) {
+        coll.drop();
+        assert.writeOK(coll.insert({str: "a"}));
+        assert.writeOK(coll.insert({str: "A"}));
+        assert.writeOK(coll.insert({str: "b"}));
+        assert.writeOK(coll.insert({str: "B"}));
+        assert.writeOK(coll.insert({str: "c"}));
+        assert.writeOK(coll.insert({str: "C"}));
+        assert.writeOK(coll.insert({str: "d"}));
+        assert.writeOK(coll.insert({str: "D"}));
+
+        // This query should fail, since there is no index to support the min/max.
+        assert.throws(() => coll.find()
+                                .min({str: "b"})
+                                .max({str: "D"})
+                                .collation({locale: "en_US", strength: 2})
+                                .itcount());
+
+        // Even after building an index with the right key pattern, the query should fail since the
+        // collations don't match.
+        assert.commandWorked(coll.createIndex({str: 1}, {name: "noCollation"}));
+        assert.throws(() => coll.find()
+                                .min({str: "b"})
+                                .max({str: "D"})
+                                .collation({locale: "en_US", strength: 2})
+                                .itcount());
+
+        // After building an index with the case-insensitive US English collation, the query should
+        // work. Furthermore, the bounds defined by the min and max should respect the
+        // case-insensitive collation.
+        assert.commandWorked(coll.createIndex(
+            {str: 1}, {name: "withCollation", collation: {locale: "en_US", strength: 2}}));
+        assert.eq(4,
+                  coll.find()
+                      .min({str: "b"})
+                      .max({str: "D"})
+                      .collation({locale: "en_US", strength: 2})
+                      .itcount());
+
+        // Ensure results from index with min/max query are sorted to match requested collation.
+        coll.drop();
+        assert.commandWorked(coll.ensureIndex({a: 1, b: 1}));
+        assert.writeOK(coll.insert(
+            [{a: 1, b: 1}, {a: 1, b: 2}, {a: 1, b: "A"}, {a: 1, b: "a"}, {a: 2, b: 2}]));
+        var expected = [{a: 1, b: 1}, {a: 1, b: 2}, {a: 1, b: "a"}, {a: 1, b: "A"}, {a: 2, b: 2}];
+        res = coll.find({}, {_id: 0})
+                  .hint({a: 1, b: 1})
+                  .min({a: 1, b: 1})
+                  .max({a: 2, b: 3})
+                  .collation({locale: "en_US", strength: 3})
+                  .sort({a: 1, b: 1});
+        assert.eq(res.toArray(), expected);
+        res = coll.find({}, {_id: 0})
+                  .hint({a: 1, b: 1})
+                  .min({a: 1, b: 1})
+                  .collation({locale: "en_US", strength: 3})
+                  .sort({a: 1, b: 1});
+        assert.eq(res.toArray(), expected);
+        res = coll.find({}, {_id: 0})
+                  .hint({a: 1, b: 1})
+                  .max({a: 2, b: 3})
+                  .collation({locale: "en_US", strength: 3})
+                  .sort({a: 1, b: 1});
+        assert.eq(res.toArray(), expected);
+
+        // A min/max query that can use an index whose collation doesn't match should require a sort
+        // stage if there are any in-bounds strings. Verify this using explain.
+        explainRes = coll.find({}, {_id: 0})
+                         .hint({a: 1, b: 1})
+                         .max({a: 2, b: 3})
+                         .collation({locale: "en_US", strength: 3})
+                         .sort({a: 1, b: 1})
+                         .explain();
+        assert.commandWorked(explainRes);
+        assert(planHasStage(explainRes.queryPlanner.winningPlan, "SORT"));
+
+        // This query should fail since min has a string as one of it's boundaries, and the
+        // collation doesn't match that of the index.
+        assert.throws(() => coll.find({}, {_id: 0})
+                                .hint({a: 1, b: 1})
+                                .min({a: 1, b: "A"})
+                                .max({a: 2, b: 1})
+                                .collation({locale: "en_US", strength: 3})
+                                .sort({a: 1, b: 1})
+                                .itcount());
     }
 })();
